--- a/style.css
+++ b/style.css
@@ -707,8 +707,6 @@ footer .social_icon li a:hover {
         width: 100%;
         height: auto;
         background: #f7f7fa;
-        display: flex;
-        flex-direction: column;
         text-align: center;
         padding-top: 60px;
         padding-left: 25px;
@@ -732,11 +730,12 @@ footer .social_icon li a:hover {
     #home .btn {
         margin-top: 20px;
         line-height: 60px;
+        justify-content: center;
     }
     #home a {
         text-decoration: none;
         font-size: 1.5rem;
-        padding: 13px 25px;
+        padding: 13px 55px;
         background-color: #fff;
         font-weight: 500;
         border-radius: 180px;
@@ -747,12 +746,20 @@ footer .social_icon li a:hover {
     }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 375px) {
     #first {
         font-size: 26.5px;
         font-weight: 550;
         letter-spacing: 3px;
         color: #fff;
         text-shadow: 3px 3px 3px #222;
+    }
+    #home a {
+        text-decoration: none;
+        font-size: 1.5rem;
+        padding: 13px 35px;
+        background-color: #fff;
+        font-weight: 500;
+        border-radius: 180px;
     }
 }
